# helium_demo

./: .env.template  .gitignore  .gitmodules  README.md  pyproject.toml
benchmark/: README.md  bench.py  helium_profile.py  main.py  sensitivity.py
benchmark/bench_programs/debate/: agentscope.py  autogen.py  base.py  helium.py  kvflow.py  langgraph.py  opwise.py  parrot.py  querywise.py
benchmark/bench_programs/iterative/: agentscope.py  autogen.py  base.py  helium.py  kvflow.py  langgraph.py  opwise.py  parrot.py  querywise.py
benchmark/bench_programs/map_reduce/: agentscope.py  autogen.py  base.py  helium.py  kvflow.py  langgraph.py  opwise.py  parrot.py  querywise.py
benchmark/bench_programs/parallel/: agentscope.py  autogen.py  base.py  helium.py  kvflow.py  langgraph.py  opwise.py  parrot.py  querywise.py
benchmark/bench_programs/reflection/: agentscope.py  autogen.py  base.py  helium.py  kvflow.py  langgraph.py  opwise.py  parrot.py  querywise.py
benchmark/bench_programs/trading/: agentscope.py  autogen.py  base.py  helium.py  kvflow.py  langgraph.py  opwise.py  parrot.py  querywise.py
benchmark/bench_programs/utils/: agentscope.py  autogen.py  common.py  kvflow.py  langgraph.py  openai.py  opwise.py  parrot.py
benchmark/bench_tasks/: base.py  debate.py  iterative.py  map_reduce.py  parallel.py  reflection.py  trading.py
benchmark/bench_utils/: mixin.py
benchmark/bench_utils/runner/: base.py  handler.py  local.py  parrot.py  sglang.py  vllm.py
benchmark/prebuilt/Qwen3-14B/: helium_iterative_amazon.dill  (+9 more)
configs/: llm_services.json  llm_services_2.json  lmcache.yaml  lmcache_0.yaml  lmcache_1.yaml
examples/: agents.ipynb  conversation.ipynb  graph_optimization.ipynb  loop.ipynb  programs.ipynb
scripts/: format.sh  install_all.sh  install_lmcache.sh  install_parrot.sh  install_rustup.sh  install_sglang.sh  install_vllm.sh  merge_results.py  nsys_profile.sh  run_experiments.sh  serve_helium.sh  serve_ollama.sh  serve_vllm.sh
src/ParrotServe/: requirements.txt
src/helium/: __init__.py  common.py  constants.py  envs.py  helium.py
src/vllm/: __init__.py
tests/: conftest.py
tests/cond_ops/: test_subgraph.py  test_while_loop.py
tests/e2e/: test_chat_agent.py  test_completion_agent.py  test_english_writing.py  test_guessing_game.py  test_majority_voting_agent.py  test_multiagent_debate.py
tests/optimizer/: test_optimizer.py
tests/prefix/: test_prefix_template.py  test_templated_radix_tree.py
tests/server/: test_api_server.py  test_error_handling.py  test_execute_multiple_times.py
tests/utils/: api_server.py  english_writing.py  guessing_game.py  multiagent_debate.py  while_loop.py
(+165 files in other folders)
